<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.filters.FiltersActivity">

    <com.example.tvmaze.ui.common.header.HeaderDetail
        app:title="@string/title_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/inputDate"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_date"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvDate"
                tools:text="09/09/21"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_country"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/etCountry"
                tools:text="09/09/21"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:layout_marginTop="5dp"
                android:textCursorDrawable="@null"
                app:iconifiedByDefault="false"
                app:queryBackground="@null"
                android:background="@drawable/input_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvCountrySelected"
                tools:text="México"
                style="@style/Label"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCountries"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_country"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/btnApply"
            android:text="@string/btn_apply"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>